k8s/eks-sample-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamhub-deployment
  namespace: streamhub-app
spec:
  replicas: 0
  selector:
    matchLabels:
      app: streamhub-app
  template:
    metadata:
      labels:
        app: streamhub-app
    spec:
      containers:
      - name: streamhubdockertest-image
        image: maylwin/dockerhub:streamhubdockertest
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
          - containerPort: 5173
        imagePullPolicy: Always
