k8s/eks-visitorlog-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: visitorlog-backend
  template:
    metadata:
      labels:
        app: visitorlog-backend
    spec:
      containers:
      - name: visitorlog-backend
        image: maylwin/visitorregistrationsystem-frontend-backend:1.0
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 4000

---

apiVersion: v1
kind: Service
metadata:
  name: visitorlog-backend-service
spec:
  type: LoadBalancer
  selector:
    app: visitorlog-backend
  ports:
  - port: 80
    targetPort: 4000
    protocol: TCP
